[package]
name = "ckb-miner-stat"
version = "0.1.0"
authors = ["david <david@fi5box.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
chrono = "0.4"
polars = { version = "0.45", features = ["lazy", "parquet", "timezones", "is_between"]}
reqwest = "0.12"